[package]
name = "mvv_common_it_test"
version = "0.1.0"
edition = "2021"


[features]



[dependencies]
mvv_common = { version = "0.1.0", path = "../common", features = ["default", "sqlx_07"] }

anyhow.workspace = true
strum.workspace = true
indoc.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
chrono.workspace = true

yaml-rust2.workspace = true
x509-parser.workspace = true

tokio.workspace = true
rustainers.workspace = true
indexmap.workspace = true
elf.workspace = true
fs_extra.workspace = true
