[package]
name = "mvv_error_macro"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true


[dependencies]
if_chain.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
itertools.workspace = true
#walkdir.workspace = true
strum.workspace = true
strum_macros.workspace = true
# proc-macro-crate.workspace = true


[dev-dependencies]
