[package]
name = "mvv_tuple_heter_iter"
version = "0.1.0"
edition = "2021"


[features]
# possible values: tuple_len_16, tuple_len_32, tuple_len_64
tuple_len_16 = ["mvv_tuple_heter_iter_macro/tuple_len_16"]
tuple_len_32 = ["mvv_tuple_heter_iter_macro/tuple_len_32"]
tuple_len_64 = ["mvv_tuple_heter_iter_macro/tuple_len_64"]

default = ["tuple_len_16", ]


[build-dependencies]


[dependencies]
mvv_tuple_heter_iter_macro = { version = "0.1.0", path = "../tuple_heter_iter_macro" }

# -------------------------------------------------------------------------
if_chain.workspace = true
cfg-if.workspace = true

static_assertions.workspace = true
#const_format.workspace = true

#anyhow = { workspace = true, features = ["backtrace"] }
#thiserror.workspace = true
#snafu.workspace = true
indoc.workspace = true


inherent.workspace = true
readonly.workspace = true
extension-trait.workspace = true

#itertools.workspace = true
#by_address.workspace = true

#tuple_len = "3.0.0"
#tuple_length = "0.2.0"


[dev-dependencies]
test-case.workspace = true
assertables.workspace = true
