[package]
name = "mvv_tuple_heter_iter_macro"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true


#[profile.release]
#strip = "symbols"  # possible: "none", "debuginfo", "symbols" (default "none")


[features]
# possible values: tuple_len_16, tuple_len_32, tuple_len_64
tuple_len_16 = []
tuple_len_32 = []
tuple_len_64 = []

default = ["tuple_len_16", ]


[dependencies]
if_chain.workspace = true

syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
itertools.workspace = true

#tuple_len.workspace = true
#tuple_length.workspace = true

[dev-dependencies]
