[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[profile.release]
#strip = "symbols"  # possible: "none", "debuginfo", "symbols" (default "none")


[dependencies]
#man = "0.3.0"
walkdir = "2.5.0"