[package]
name = "tuple_heter_iter"
version = "0.1.0"
edition = "2021"

#[workspace]
#members = [
#    "../tuple_heter_iter_macro",
#]

[features]
# possible values: tuple_len_16, tuple_len_32, tuple_len_64
tuple_len_16 = ["tuple_heter_iter_macro/tuple_len_16"]
tuple_len_32 = ["tuple_heter_iter_macro/tuple_len_32"]
tuple_len_64 = ["tuple_heter_iter_macro/tuple_len_64"]

default = ["tuple_len_16", ]


[build-dependencies]
cargo_metadata = "0.18.1"


[dependencies]
tuple_heter_iter_macro = { version = "0.1.0", path = "../tuple_heter_iter_macro" }

# -------------------------------------------------------------------------
if_chain = "1.0.2"
cfg-if = "1.0.0"

static_assertions = "1.1.0"
const_format = "0.2.32"

#anyhow = { version = "1.0.83", features = ["backtrace"] }
#thiserror = "1.0.60"
#snafu = "0.8.2"
indoc = "2.0.5"

## !!! Out dated !!!
## !!! backtrace = "0.3.71"

#strum = "0.26"
#strum_macros = "0.26"

#derivative = "2.2.0"

#ctor = "0.2.8"
#once_cell = "1.19.0"
#lazy_static = "1.4.0"
#static_init = "1.0.3"

log = "0.4.21"
env_logger = "0.11.3"
#tracing = {  version = "0.1.40", features = ["attributes", "log", ] }
#tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
#tracing-log = "0.2.0"
#tracing-attributes = "0.1.27"
#tracing-timing = "0.6.0"

dotenv = "0.15.0"

inherent = "1.0.11"
readonly = "0.2.12"
extension-trait = "1.0.2"
#ambassador = { version = "0.4.0",  optional = true }

#num = "0.4.3"
#nutype = "0.4.2"

#type-rules = { version = "0.2.3", features = ["derive", "regex"] }

#bytes = "1.6.0"

itertools = "0.13.0"
by_address = "1.2.1"

#tuple_len = "3.0.0"
#tuple_length = "0.2.0"

# unused manifest key: tests
#[test]
#[tests]


[dev-dependencies]
#mockall = "0.12.1"
#test-case = "3.3.1"
#test-case = "2.2.2"
test-case = "*"
assertables = "7.0.1"

#assert_json = "0.1.0"
assert-json-diff = "2.0.2"
#jsondiff = "0.1.0"

#assert-text = "0.2.9"
#assert_eq_all = "0.1.1"
#assert_fn = "1.0.7"
#assert_json = "0.1.0" // requires 'thiserror v1.0.60 (*)'
#assert-call = "0.1.1"
#assert_no_alloc = "1.1.2"
#assert_approx_eq = "1.1.0"
#assert_that = "0.1.2"
#assert_panic_free = "1.0.2"
#assert_matches = "1.5.0"

# # Seems it does not work.
# color-backtrace = "0.6.1"
# ctor = "0.2.8"

macro_rules_attribute = "0.2.0"

# hm... unused manifest key: benches
